Mon Feb  4 09:50:38 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (about_window): added Vashti.
	* src/net.c (read_from_connection): Robin's fix to MCCP segfaults.
	* src/prefs.c (window prefs): added title to preferences window.
	* src/modules.c (do_plugin_information): likewise.
	* po/{ca,es}.po: Updated translations.
	* BUGS: removed old color dialog bug.

Mon Feb  4 09:31:23 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: added Vashti.
	* CONTRIBUTERS: removed.

Sat Feb  2 20:11:21 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* Forgot to cvs remove some stuff in intl/.
	* Removed config.guess & config.sub, provided by automake,
	added them to .cvsignore.

Sat Feb  2 17:29:25 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* Upgraded to gettext 0.10.40.

Sat Feb  2 16:21:42 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/telnet.c: patch from Vashti to get rid of the annoying
	ASCII 255 char at the end of telnet packets in some MUDs.

Fri Feb  1 17:35:44 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c: patch from Petter Stokke to fix a bug in the
	python stuff.

Fri Feb  1 15:34:32 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
	
	* Added patch from Vashti <vashti@jml.net> which adds support
	for keypad keys for directions.

	* CONTRIBUTERS: Added.
	* src/gnome-mud.h (system_data): Added bool DisableKeys;
	
	* src/init.c (text_entry_send_command): Added.
	(text_entry_key_press_cb): profilekeybinds can now override
	system keybinds.

	* src/prefs.c: Added prefs.DisableKeys to load/save, and to
	prefs dialog.

Fri Feb  1 14:08:27 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: added some 0.9.0 notes.

Fri Feb  1 13:40:36 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/{ca,es}.po: Updated.

Fri Feb  1 13:17:35 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* intl/Makefile.in: temporary fix for non-glibc systems.

Fri Feb  1 10:42:42 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
